# python-knickknacks

./: .pre-commit-config.yaml  README.md  categorize_download_folder.py  download_images_from_webpage.py  encrypt_decrypt_text.py  image_watermark.py  progress_bar_resize_image.py  pyproject.toml  search_strings_from_multiple_files.py  send_emails_from_csv.py  todo_app.py
