[tool.poetry]
name = "python-knickknacks"
version = "0.1.0"
description = ""
authors = ["Michael V. Battista <github@mvbattista.com>"]
readme = "README.md"
#packages = [{include = "python_knickknacks"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pillow = "^9.5.0"
selenium = "^4.10.0"
tqdm = "^4.65.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
